--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <header id="header"></header>
+    <div id="application"></div>
   </body>
 </html>
